crates/ppvm-stim/tests/snapshots/parser_snapshots__whitespace_stress_program.snap
---
source: crates/ppvm-stim/tests/parser_snapshots.rs
expression: prog
---
Program {
    instructions: [
        Gate {
            name: H,
            tags: [],
            args: [],
            targets: [
                0,
            ],
            line: 1,
        },
        Gate {
            name: CX,
            tags: [],
            args: [],
            targets: [
                0,
                1,
            ],
            line: 2,
        },
        Measure {
            name: M,
            tags: [],
            args: [],
            targets: [
                0,
                1,
            ],
            line: 3,
        },
    ],
}
